# onemod_diagnostics

./: LICENSE  README.md  pyproject.toml
src/onemod_diagnostics/figure/: __init__.py  plot_result.py
